--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    font-family: Robo, "Helvetia Neue", sans-serif;
+    background-color: #fff;
+    padding-top: 60px;
+    height: 100%;
+}
+
+
+body * {
+    font-family:  Robo, "Helvetia Neue", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
