--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,11 @@
+<br><br><br>
+
 <div class="filters">
     <mat-form-field>
         <mat-label>Sort</mat-label>
         <mat-select 
             panelClass="sort-select"
-            [(ngModel)]="sort">
+            [(ngModel)]="sort" (selectionChange)="searchGames(sort)">
             <mat-option value="name">Name</mat-option>
             <mat-option value="-released">Released</mat-option>
             <mat-option value="-added">Added</mat-option>
@@ -16,25 +18,29 @@
 </div>
 
 <div class="games">
-    <div class="game">
-        <div class="game-thumb-container">
-            <img 
-            src="https://upload.wikimedia.org/wikipedia/en/a/a5/Grand_Theft_Auto_V.png" 
-            alt="thumbnail" 
-            class="game-thumbnail"
-            />
-    
-        </div>
-
-        <div class="game-description">
-            <p class="game-name">Name</p>
-            <div class="game-platforms">
+    <ng-container *ngFor="let game of games">
+        <div class="game" (click)="openGameDetails(game.id)">
+            <div class="game-thumb-container">
                 <img
-                class="game-platform" 
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Xbox_logo_%282019%29.svg/1280px-Xbox_logo_%282019%29.svg.png" 
-                alt="xbox" >
+                *ngIf="game.background_image" 
+                src="{{ game.background_image }}" 
+                alt="thumbnail" 
+                class="game-thumbnail"
+                />
+                <p *ngIf="!game.background_image">No image</p>
             </div>
-
+    
+            <div class="game-description">
+                <p class="game-name">{{game.name}}</p>
+                <div class="game-platforms">
+                    <img
+                    *ngFor="let gamePlatform of game.parent_platforms"
+                    class="game-platform" 
+                    src="../../../assets/images/platforms/{{ gamePlatform.platform.slug }}.svg" 
+                    alt="{{ gamePlatform.platform.slug}}" >
+                </div>
+    
+            </div>
         </div>
-    </div>
+    </ng-container>
 </div>
